Adding \Cov custom latex command

--- a/header.tex
+++ b/header.tex
@@ -110,6 +110,7 @@
 \newcommand\sdSample{\mathrm{sd}}
 \newcommand\varSample{\mathrm{var}}
 \newcommand\cov{\mathrm{Cov}}
+\newcommand\Cov{\mathrm{Cov}}
 \newcommand\covSample{\mathrm{cov}}
 \newcommand\corSample{\mathrm{cor}}
 \newcommand\cor{\mathrm{Cor}}
