--- a/04/main.tex
+++ b/04/main.tex
@@ -1111,7 +1111,68 @@ $$
   
   \begin{exampleblock}{Example: Calculating Covariance}
     Let $(X, Y)$ be jointly defined random variables is joint pdf $f(x, y) = 2x + 2y - 4xy$, for all $0 \leq x, y \leq 1$. Calculate the covariance $\Cov(X, Y)$.
+    
+    \mode<article>{
+    \emph{Solution:}
+    \begin{itemize}
+      \item You might notice that $f(x, y)$ was one of the copula functions considered in the last chapter, specifically the bivariate construction using the function $H(x, y)$, marginal uniform densities, and parameter $\alpha = -1$. This isn't necessary, but useful to note that the marginal distributions are uniform.
+      \item We will use the identity $\Cov(X, Y) = E[XY] - E[X]E[Y]$.
+      \item First, we have
+      \begin{align*}
+        E[X] &= \int_0^1 xf_X(x)\, dx \\
+             &= \int_0^1 x \left(\int^1_0 f(x, y) \,dy\right) \, dx \\
+             &= \int_0^1 x \left(\int^1_0 (2x + 2y - 4xy) \,dy\right) \, dx \\
+             &= \int_0^1 x (1)\, dx = 1/2
+             % &= \frac{1}{2}x^\big|_0^1 = 1/2.
+      \end{align*}
+      \item By symmetry, we also have $E[Y] = E[X] = 1/2$. 
+      \item (Note in the calculation above, we find that $X$ and $Y$ are marginally Uniform$(0, 1)$ distributed).
+      \item Now to calculate $E[XY]$:
+      \begin{align*}
+        E[XY] &= \iint xy f(x, y)\, dx\,dy\\
+              &= \int_{0}^1 \int_0^1 xy\, (2x + 2y - 4xy) dxdy \\
+              &= \int_0^1 \Big(\frac{2}{3}x^3y + x^2y^2 - \frac{4}{3}x^3y^2\Big)^1_0 \, dy \\
+              &= \int_0^1 \Big(\frac{2}{3}y + y^2 - \frac{4}{3}y^2\Big) \, dy \\
+              &= \Big(\frac{1}{3}y^2 + \frac{1}{3}y^3 -\frac{4}{9}y^3)^1_0 \\
+              &= \frac{1}{3} + \frac{1}{3} - \frac{4}{9} = \frac{2}{9}.
+      \end{align*}
+      \item Therefore, the covariance $\Cov(X, Y)$ is given by:
+      $$
+      \Cov(X, Y) = E[XY] -E[X]E[Y] = \frac{2}{9} - \frac{1}{4} = -\frac{1}{36}
+      $$
+    \end{itemize}
+    }
+
   \end{exampleblock}
+  
+  \mode<presentation>{
+  \emph{Solution:}
+  
+  \framebreak
+  
+  \emph{Solution cont...}
+  
+  }
+  
+\end{frame}
+
+\begin{frame}{Covariance Properties}
+  \begin{itemize}
+    \item Covariance has several useful properties that can help with calculations.
+    \item One of theme is that the covariance is \alert{bilinear} operator.
+  \end{itemize}
+  
+  \begin{block}{Theorem: Bilinear Covariance}
+    Let $X_i$, $i = 1, 2, \ldots, n$ and $Y_j$, $j = 1, 2, \ldots, m$ be a collection of random variables, and $a, c, b_i, d_j$ be real numbers for all $i$ and $j$. Then:
+    $$
+    \Cov\big(a + \sum_{i=1}^n X_i, c + \sum_{j = 1}^m Y_i\big) = \sum^n_{i = 1}\sum^m_{j = 1} b_i d_j \Cov(X_i, Y_j).
+    $$
+    In particular, 
+    % \TODO{Fix below, it's wrong.}
+    $$
+    \Cov(aX + bW, cY + dZ) = ac\Cov(W, Y) + bc\Cov(X, Y) + ad\Cov()
+    $$
+  \end{block}
   
 \end{frame}
 
