Added new command for correlation

--- a/header.tex
+++ b/header.tex
@@ -114,6 +114,7 @@
 \newcommand\covSample{\mathrm{cov}}
 \newcommand\corSample{\mathrm{cor}}
 \newcommand\cor{\mathrm{Cor}}
+\newcommand\Cor{\cor}
 \newcommand\given{{\, | \,}}
 \newcommand\param{\,;}
 \newcommand\params{\param}
